--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,1 +1,10 @@
-<h2>商品一覧</h2>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-8 offset-md-1'>
+      <h2>商品一覧</h2>
+      <p>
+        <%= render 'index', items: @items %>
+      </p>
+    </div>
+  </div>
+</div>
