--- a/app/views/public/deliveries/_index.html.erb
+++ b/app/views/public/deliveries/_index.html.erb
@@ -8,13 +8,16 @@
     </tr>
   </thead>
   <tbody>
-    <% @xxx.each do |xxx| %>
+    <% deliveries.each do |deliverie| %>
       <tr>
-        <td><%=  %></td>　郵便番号表示
-        <td><%=  %></td>　住所表示
-        <td><%=  %></td>　宛名表示
-        <td><%= link_to "編集 ", xxx_path(@xxx.id), class:"btn btn-success" %></td>
-        <td><%= link_to "削除", xxx_path(@xxx), class:"btn btn-danger", method: :delete %><td>
+        <!--郵便番号表示-->
+        <td><%= deliverie.postcode %></td>
+        <!--住所表示-->
+        <td><%= deliverie.address %></td>
+        <!--宛名表示-->
+        <td><%= deliverie.name %></td>
+        <td><%= link_to "編集 ", deliverie_edit_path(@deliverie.id), class:"btn btn-success" %></td>
+        <td><%= link_to "削除", deliverie_path(@deliverie), class:"btn btn-danger", method: :delete %><td>
       </tr>
     <% end %>
   </tbody>
