--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -3,11 +3,11 @@
     <div class='col-md-3'>
       <h2>配送先登録/一覧<h2>
         <div>
-          <%= render 'create', xxx: @xxx %>
+          <%= render 'create', deliverie: @deliverie %>
         </div>
         
         <div>
-          <%= render 'index', xxx: @xxx %>
+          <%= render 'index', deliveries: @deliveries %>
         </div>
     </div>
   </div>
