--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,30 @@
-<h1>sample</h1>
+<h2>注文履歴一覧</h2>
+  <thead>
+    <tr>
+      <th>注文日</th>
+      <th>配送先</th>
+      <th>注文商品</th>
+      <th>支払金額</th>
+      <th>ステータス</th>
+      <th>注文詳細</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @order_details.each do |order| %>
+      <tr>
+        <!--注文日-->
+        <td><%= order.created_at %></td>
+        <!--配送先-->
+        <td><%= order.address %></td>
+        <!--注文商品-->
+        <td><%= order.item_id %></td>
+        <!--支払金額-->
+        <td><%= order.total_payment %></td>
+        <!--ステータス-->
+        <td><%= order.order_status %></td>
+        <!--注文詳細-->
+        <td><%= link_to "表示する", order_details_id %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
