--- a/app/views/public/deliveries/edit.html.erb
+++ b/app/views/public/deliveries/edit.html.erb
@@ -5,15 +5,15 @@
     <%= form_with model:@delivery, local:true do |f| %>
       <div class="form-group">
         <%= f.label 郵便番号(ハイフンなし) %>
-        <%= f.text_field :xxx, class: "form-control xxx" %>
+        <%= f.text_field :postcode, class: "form-control xxx" %>
       </div>
     　<div class="form-group">
         <%= f.label 住所 %>
-        <%= f.file_field :xxx, class: "form-control-file xxx" %>
+        <%= f.file_field :address, class: "form-control-file xxx" %>
       </div>
       <div class="form-group">
         <%= f.label 宛名 %>
-        <%= f.file_field :xxx, class: "form-control-file xxx" %>
+        <%= f.file_field :name, class: "form-control-file xxx" %>
       </div>
       <div class="form-group">
         <%= f.submit class: 'btn btn-secondary' %>
