--- a/app/views/public/items/_index.html.erb
+++ b/app/views/public/items/_index.html.erb
@@ -4,15 +4,16 @@
   <tbody>
     <% items.each do |item| %>
       <tr>
-        <td><%= link_to(item.id) do %>
-            <%= image_tag item.get_profile_image, size:'50x50' %>
-            <% end %>
+        <td><%#= link_to(item.id) do %>
+            <%#= image_tag item.get_profile_image, size:'50x50' %>
+            <%# end %>
         </td>
-        <td><%= item.name %></td>
-        <td><%= item.description %></td>
-        <td><%= item.price %></td>
+        <td><%= item.item_name %></td>
+        <td><%= item.item_description %></td>
+        <td><%= item.item_price %></td>
         <!--<td>個数選択</td>-->
         <td><%= link_to "カートに入れる" %></td>
       </tr>
+    <% end %>
   </tbody>
 </table>
