--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -2,9 +2,28 @@
   <div class='row'>
     <div class='col-md-8 offset-md-1'>
       <h2>商品一覧</h2>
-      <p>
-        <%= render 'index', items: @items %>
-      </p>
+      <table class='table table-hover table-inverse'>
+        <thead>
+        </thead>
+        <tbody>
+          <% @items.each do |item| %>
+          <tr>
+            <td><%#= link_to(item.id) do %>
+            <%#= image_tag item.get_profile_image, size:'50x50' %>
+            <%# end %>
+            </td>
+            <td><%= item.item_name %></td>
+            <td><%= item.item_description %></td>
+            <td><%= item.item_price %></td>
+            <!--<td>個数選択</td>-->
+            <td><%= link_to "カートに入れる" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <!--<p>-->
+        <%#= render 'index', items: @items %>
+      <!--</p>-->
     </div>
   </div>
 </div>
