--- a/app/views/public/deliveries/_index.html.erb
+++ b/app/views/public/deliveries/_index.html.erb
@@ -8,16 +8,16 @@
     </tr>
   </thead>
   <tbody>
-    <% deliveries.each do |deliverie| %>
+    <% deliveries.each do |delivery| %>
       <tr>
         <!--郵便番号表示-->
-        <td><%= deliverie.postcode %></td>
+        <td><%= delivery.postcode %></td>
         <!--住所表示-->
-        <td><%= deliverie.address %></td>
+        <td><%= delivery.address %></td>
         <!--宛名表示-->
-        <td><%= deliverie.name %></td>
-        <td><%= link_to "編集 ", deliverie_edit_path(@deliverie.id), class:"btn btn-success" %></td>
-        <td><%= link_to "削除", deliverie_path(@deliverie), class:"btn btn-danger", method: :delete %><td>
+        <td><%= delivery.name %></td>
+        <td><%= link_to "編集 ", edit_deliverie_path(@delivery.id), class:"btn btn-success" %></td>
+        <td><%= link_to "削除", delivery_path(@delivery), class:"btn btn-danger", method: :delete %><td>
       </tr>
     <% end %>
   </tbody>
