--- a/app/views/public/deliveries/_create.html.erb
+++ b/app/views/public/deliveries/_create.html.erb
@@ -1,14 +1,14 @@
-<%= form_with model:delivery,local:true do |f| %>
+<%= form_with model:delivery, local:true do |f| %>
   <div class="form-group">
-    <%= f.label 郵便番号(ハイフンなし) %>
+    <%= f.label "郵便番号(ハイフンなし)" %>
     <%= f.text_field :postcode, class: 'form-control book_title' %>
   </div>
   <div class="form-group">
-    <%= f.label 住所 %>
+    <%= f.label "住所" %>
     <%= f.text_area :address, class: 'form-control book_body' %>
   </div>
   <div class="form-group">
-    <%= f.label 宛名 %>
+    <%= f.label "宛名" %>
     <%= f.text_area :name, class: 'form-control book_body' %>
   </div>
 
