--- a/app/views/public/deliveries/edit.html.erb
+++ b/app/views/public/deliveries/edit.html.erb
@@ -4,15 +4,15 @@
     <h2>配送先編集</h2>
     <%= form_with model:@delivery, local:true do |f| %>
       <div class="form-group">
-        <%= f.label 郵便番号(ハイフンなし) %>
+        <%= f.label "郵便番号(ハイフンなし)" %>
         <%= f.text_field :postcode, class: "form-control xxx" %>
       </div>
     　<div class="form-group">
-        <%= f.label 住所 %>
+        <%= f.label "住所" %>
         <%= f.file_field :address, class: "form-control-file xxx" %>
       </div>
       <div class="form-group">
-        <%= f.label 宛名 %>
+        <%= f.label "宛名" %>
         <%= f.file_field :name, class: "form-control-file xxx" %>
       </div>
       <div class="form-group">
