--- a/app/views/public/deliveries/index.html.erb
+++ b/app/views/public/deliveries/index.html.erb
@@ -3,9 +3,9 @@
     <div class='col-md-3'>
       <h2>配送先登録/一覧<h2>
         <div>
-          <%= render 'create', deliverie: @deliverie %>
+          <%= render 'create', delivery: @delivery %>
         </div>
-        
+
         <div>
           <%= render 'index', deliveries: @deliveries %>
         </div>
