--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div class='col-md-8 offset-md-1'>
     <h2>商品一覧</h2>
+    <p><%= link_to '新規登録',new_admin_item_path %></p>
     <p><%= render 'index', items: @items %> </p>
   </div>
 </div>
