--- a/app/views/public/deliveries/edit.html.erb
+++ b/app/views/public/deliveries/edit.html.erb
@@ -1,19 +1,16 @@
-<div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>配送先編集</h2>
-    <%= form_with model:@delivery, local:true do |f| %>
+    <%= form_with model:@delivery, url: public_deliveries_path, local:true do |f| %>
       <div class="form-group">
         <%= f.label "郵便番号(ハイフンなし)" %>
-        <%= f.text_field :postcode, class: "form-control xxx" %>
+        <%= f.text_field :postcode %>
       </div>
     　<div class="form-group">
         <%= f.label "住所" %>
-        <%= f.file_field :address, class: "form-control-file xxx" %>
+        <%= f.file_field :address %>
       </div>
       <div class="form-group">
         <%= f.label "宛名" %>
-        <%= f.file_field :name, class: "form-control-file xxx" %>
+        <%= f.file_field :name %>
       </div>
       <div class="form-group">
         <%= f.submit class: 'btn btn-secondary' %>
