--- a/app/views/admin/genres/_create.html.erb
+++ b/app/views/admin/genres/_create.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model:genre, url: admin_genres_path, local:true do |f| %>
+<%= form_with model:genre, url: admin_genres_path, local:true, method: :post do |f| %>
   <div class="form-group">
     <%= f.label "ジャンル名" %>
     <%= f.text_field :name %>
