--- a/app/views/admin/items/_index.html.erb
+++ b/app/views/admin/items/_index.html.erb
@@ -13,7 +13,7 @@
     <tr>
       <td><%= item.id %></td>
       <td><%= link_to item.item_name, admin_item_path(item.id) %></td>
-      <td><%= item.price %></td>
+      <td>¥<%= item.price %></td>
       <td><%= item.genre.name %></td>
       <% if item.sale_status == true %>
       <td><%= "販売中" %></td>
