--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,17 +3,31 @@
   <head>
     <title>Nagano Cake</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-  　<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <!--%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>-->
-    <!--<= csrf_meta_tags %>-->
-    <!--<= csp_meta_tag %>-->
+  　<%#= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
 
-    <!--<= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>-->
-    <!--<= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>-->
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
+    
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
+    <% if customer_signed_in? %>
+      <li>
+        <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+      </li>
+    <% else %>
+      <li>
+        <%= link_to "新規登録", new_customer_registration_path %>
+      </li>
+      <li>
+        <%= link_to "ログイン", new_customer_session_path %>
+      </li>
+    <% end %>
+    <%#= render 'layouts/header' %>
     
     <%= yield %>
     
