--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,8 @@
 <h1>about</h1>
+<h5>
+  ながのCAKEは全国配送可能なケーキ屋さんです<br>
+  子供からお年寄りの方までお召し上がりいただけるように、<br>
+  さまざまなバリデーションをご用意しております<br>
+  また、全国発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+  ぜひご注文ください<br>
+</h5>
