--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,5 +1,5 @@
 <h2>ショッピングカート</h2>
-<!--カート削除-->
+<p><%= link_to "カートを空にする", public_cart_item_path(@cart_items), method: :delete, class: "btn btn-sm btn-danger"%></p>
 <table class="table">
   <thead>
     <tr>
@@ -16,8 +16,12 @@
       <td><%= cart_item.item.item_name %></td>
       <td><%= cart_item.item.price %></td>
       <td><%= cart_item.amount %></td>
+      <!--<%#= form_with model: @cart_item, url: public_cart_item_path, method: :patch, local:true do |f| %>-->
+      <!-- <td><%#= f.select :amount, options_for_select(@cart_item, {selected: cart_item.amount.to_i} ) class: 'sample'%></td>-->
+      <!--<%# end %>-->
       <td><%= cart_item.subtotal %></td>
       <% @total +=  cart_item.subtotal %>
+      <td><%= link_to "削除", public_cart_item_path(cart_item), method: :delete, class: "btn btn-sm btn-danger"%></td>
     </tr>
     <% end %>
   </tbody>
