--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -14,7 +14,7 @@
     <% @cart_items.each do |cart_item| %>
     <tr>
       <td><%= cart_item.item.item_name %></td>
-      <td><%= cart_item.item.price %></td>
+      <td><%= cart_item.item.with_tax_price %></td>
       <td><%= form_with model: @cart_item, url: public_cart_item_path(cart_item), method: :patch, local:true do |f| %>
        <%= f.select :amount, options_for_select((1..20).to_a,{selected: cart_item.amount.to_i}), class: 'sample'%>
        <%= f.submit '変更', class: "btn btn-primary" %>
@@ -28,8 +28,14 @@
   </tbody>
   <tfoot>
     <tr>
+      <td><%= link_to "買い物を続ける", public_items_path %></td>
+    </tr>
+    <tr>
       <td>合計金額</td>
       <td><%= @total %></td>
+    </tr>
+    <tr>
+      <td><%#= link_to"情報入力に進む", new_pbulic_order_path %></td>
     </tr>
   </tfoot>
 </table>
