--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <%= link_to "ログイン", new_customer_session_path %>
       </li>
     <% end %>
-    <%#= render 'layouts/header' %>
+    <%= render 'layouts/header' %>
     
     <%= yield %>
 
