--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -12,10 +12,15 @@
     <td>ジャンル<%= @items.genre.name %></td>
   </tr>
   <tr>
-    <td>税込価格<%= @items.price %></td>
+    <td>税込価格(税抜価格）<%= @items.with_tax_price %>（<%= @items.price %>）</td>
   </tr>
   <tr>
-    <td>販売ステータス<%= @items.sale_status %></td>
+    <td>販売ステータス<% if @items.sale_status == true %>
+                      <%= "販売中" %>
+                      <% else %>
+                      <%= "売り切れ" %>
+                      <% end %>
+    </td>
   </tr>
   <tr>
     <td><%= link_to '編集', edit_admin_item_path(@items.id), class: "btn btn-sm btn-success" %></td>
