--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -13,7 +13,8 @@
   <tbody>
     <% @cart_items.each do |cart_item| %>
     <tr>
-      <td><%= cart_item.item.item_name %></td>
+      <td><%= image_tag cart_item.item.image, size:"50x40" %>
+          <%= cart_item.item.item_name %></td>
       <td><%= cart_item.item.with_tax_price %></td>
       <td><%= form_with model: @cart_item, url: public_cart_item_path(cart_item), method: :patch, local:true do |f| %>
        <%= f.select :amount, options_for_select((1..20).to_a,{selected: cart_item.amount.to_i}), class: 'sample'%>
