--- a/app/views/admin/items/_index.html.erb
+++ b/app/views/admin/items/_index.html.erb
@@ -18,9 +18,10 @@
       <% if item.sale_status == true %>
       <td><%= "販売中" %></td>
       <% else %>
-      <td><%= "売り切れ" %></td>
+      <td><%= "販売停止中" %></td>
       <% end %>
     </tr>
     <% end %>
   </tbody>
 </table>
+ <%= paginate @items %>
