--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,12 +24,12 @@
             <%= link_to "ログアウト", destroy_customer_session_path, method: :delete,class: 'nav-link text-light' %>
           </li>
         <!--adminログイン後のヘッダー-->
-        <% elsif  admin_signed_in? %>
+        <% elsif admin_signed_in? %>
           <li>
             <%= link_to"商品一覧", admin_items_path,class: 'nav-link text-light' %>
           </li>
           <li>
-            会員一覧
+            <%= link_to "会員一覧", admin_customers_path,class: 'nav-link text-light' %>
           </li>
           <li>
             注文履歴一覧
