--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -14,7 +14,7 @@
       <%= f.label :delivery_id, "ご自身の住所" %>
         <%= @order.postcode %>
         <%= @order.address %>
-        <%#= @order.name %>
+        <%= @order.name %>
 
       <%= f.radio_button :delivery_id, "delivery_address" %>
       <%= f.label :delivery_id, "登録済み住所から選択" %>
@@ -34,6 +34,6 @@
           <%= f.label "宛名" %>
           <%= f.text_area :name %>
          </div>
-         
+
          <td><%= f.submit '確認画面へ進む', url:public_orders_confirm_path, method: :post, class: "btn btn-primary" %></td>
       <% end %>
