--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -36,7 +36,7 @@
       <td><%= @total %></td>
     </tr>
     <tr>
-      <td><%#= link_to"情報入力に進む", new_pbulic_order_path %></td>
+      <td><%= link_to"情報入力に進む", new_public_order_path %></td>
     </tr>
   </tfoot>
 </table>
