--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,25 @@
-<h1>top</h1>
+<p>ようこそ、ながのCAKEへ!<br>
+   このサイトは、ケーキ販売のECサイトになります。<br>
+   会員でない方も商品の閲覧はできますが、<br>
+   購入には会員登録が必要になります。
+</p>
+
+<h2>新着商品</h2>
+      <table class='table table-hover table-inverse'>
+        <thead>
+        </thead>
+        <tbody>
+          <% @items.each do |item| %>
+            <tr>
+              <td><%= image_tag item.image, size:'50x50' %></td>
+            </tr>
+            <tr>
+              <td><%= item.item_name %></td>
+            </tr>
+            <tr>
+              <td>¥<%= item.with_tax_price %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= link_to "全ての商品を見る", public_items_path %>
