--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,5 @@
 
       <h2>商品一覧</h2>
-      <div></div>
       <table class='table table-hover table-inverse'>
         <thead>
         </thead>
@@ -15,9 +14,7 @@
               </td>
             </tr>
             <tr>
-            </tr>
-            <tr>
-              <td>¥<%= item.price %></td>
+              <td>¥<%= item.with_tax_price %></td>
             </tr>
             <% else %>
              <tr>
