--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -21,7 +21,7 @@
       <%= f.label :delivery_id, "登録済み住所から選択" %>
       <%= f.select :delivery_id, options_from_collection_for_select(Delivery.all, :id, :address_display) %>
 
-      <%= f.radio_button :delivery_id, "nes_address" %>
+      <%= f.radio_button :delivery_id, "new_address" %>
       <%= f.label :delivery_id, "新しい住所を登録" %>
          <div class="form-group">
            <%= f.label "郵便番号(ハイフンなし)" %>
@@ -36,5 +36,5 @@
           <%= f.text_area :name %>
          </div>
 
-         <td><%= f.submit '確認画面へ進む', url:public_orders_confirm_path, method: :post, class: "btn btn-primary" %></td>
+         <td><%= f.submit '確認画面へ進む', url: public_orders_confirm_path, method: :post, class: "btn btn-primary" %></td>
       <% end %>
