--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -10,18 +10,18 @@
 </div>
   <div>
     <h2>お届け先</h2>
-      <%= f.radio_button :delivery_id, "customer_address" %>
+      !<%= f.radio_button :delivery_id, 3 %>
       <%= f.label :delivery_id, "ご自身の住所" %>
         <%= @order.postcode %>
         <%= @order.address %>
         <%= @order.name %>
 
 
-      <%= f.radio_button :delivery_id, "delivery_address" %>
+      !<%= f.radio_button :delivery_id, 2 %>
       <%= f.label :delivery_id, "登録済み住所から選択" %>
       <%= f.select :delivery_id, options_from_collection_for_select(Delivery.all, :id, :address_display) %>
 
-      <%= f.radio_button :delivery_id, "new_address" %>
+      !<%= f.radio_button :delivery_id, 1 %>
       <%= f.label :delivery_id, "新しい住所を登録" %>
          <div class="form-group">
            <%= f.label "郵便番号(ハイフンなし)" %>
