--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -12,13 +12,13 @@
     <% @cart_items.each do |cart_item| %>
       <tr>
         <td><%= cart_item.item.item_name %></td>
-        <td><%= cart_item.item.item.with_tax_price %></td>
+        <td><%= cart_item.item.with_tax_price %></td>
         <td><%= cart_item.amount %></td>
         <td><%= cart_item.subtotal %></td>
       </tr>
       <tr><th>送料</th><td>800</td></tr>
-      <tr><th>商品合計</th><td><% @total +=  cart_item.subtotal %></td></tr>
-      <tr><th>請求金額</th><td><% @total +=  cart_item.subtotal + 800 %></td></tr>
+      <tr><th>商品合計</th><td><% @total += cart_item.subtotal %></td></tr>
+      <tr><th>請求金額</th><td><% @total += cart_item.subtotal + 800 %></td></tr>
     <% end %>
     <div>
       支払方法
@@ -26,11 +26,12 @@
     </div>
     <div>
       お届け先
-       <p><%= @order.postcode %>&emsp;<%= @order.address %></p>
-       <p><%= @order.name %></p>
+     <%= @order.postcode %><br>
+     <%= @order.address %><br>
+     <%= @order.name %><br>
     </div>
     <%= form_with model: @order, url: public_orders_path, method: :post, local: true do |f| %>
-　    <%= f.submit "注文を確定する",class: "btn btn-sm btn-danger" %>
+　    <%= f.submit "注文を確定する", class: "btn btn-sm btn-danger" %>
     <% end %>
   </tbody>
 </table>
