--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,29 +1,29 @@
 <h2>注文履歴一覧</h2>
+<table>
   <thead>
     <tr>
       <th>注文日</th>
-      <th>配送先</th>
-      <th>注文商品</th>
-      <th>支払金額</th>
-      <th>ステータス</th>
-      <th>注文詳細</th>
+      <th>購入者</th>
+      <th>注文個数</th>
+      <th>注文ステータス</th>
     </tr>
   </thead>
   <tbody>
-    <% @order_details.each do |order| %>
+    <% @order.each do |order| %>
       <tr>
         <!--注文日-->
-        <td><%= order.created_at %></td>
+        <td><%= link_to admin_order_path(order.id) do %>
+          　<%= order.created_at %>
+          　<% end %>
+        </td>
         <!--配送先-->
         <td><%= order.address %></td>
         <!--注文商品-->
-        <td><%= order.item_id %></td>
-        <!--支払金額-->
-        <td><%= order.total_payment %></td>
+        <td><%#= order.cart_item %></td>
+        <!--支払個数-->
+        <td>¥<%= order.total_payment %></td>
         <!--ステータス-->
-        <td><%= order.order_status %></td>
-        <!--注文詳細-->
-        <td><%= link_to "表示する", order_details_id %></td>
+        <td><%= order.order_status_i18n %></td>
       </tr>
     <% end %>
   </tbody>
