--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
             <%= link_to "会員一覧", admin_customers_path,class: 'nav-link text-light' %>
           </li>
           <li>
-            注文履歴一覧
+            <%= link_to "注文履歴一覧", admin_homes_top_path,class: 'nav-link text-light' %>
           </li>
           <li>
             <%= link_to "ジャンル一覧", admin_genres_path,class: 'nav-link text-light' %>
