--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,23 +1,20 @@
 <h2>注文履歴一覧</h2>
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>注文日</th>
+      <th>注文日時</th>
       <th>購入者</th>
       <th>注文個数</th>
       <th>注文ステータス</th>
     </tr>
   </thead>
   <tbody>
-    <% @order.each do |order| %>
+    <% @orders.each do |order| %>
       <tr>
-        <!--注文日-->
         <td><%= link_to admin_order_path(order.id) do %>
-          　<%= order.created_at %>
+          　<%= order.created_at.strftime('%Y/%m/%d') %>
           　<% end %>
         </td>
-        <!--配送先-->
-        <td><%= order.address %></td>
         <!--注文商品-->
         <td><%#= order.cart_item %></td>
         <!--支払個数-->
