--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 
       <h2>商品一覧</h2>
-      <table class='table table-hover table-inverse'>
+      <table class='table'>
         <thead>
         </thead>
         <tbody>
