--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -15,11 +15,8 @@
           　<%= order.created_at.strftime('%Y/%m/%d') %>
           　<% end %>
         </td>
-        <!--注文商品-->
-        <td><%#= order.cart_item %></td>
-        <!--支払個数-->
+        <td><%= order.name %></td>
         <td>¥<%= order.total_payment %></td>
-        <!--ステータス-->
         <td><%= order.order_status_i18n %></td>
       </tr>
     <% end %>
