注文一覧完了

--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -22,7 +22,7 @@
     <% end %>
     <div>
       支払方法
-       <p><%= @order.payment_method %></p>
+       <p><%= @order.payment_i18n %></p>
     </div>
     <div>
       お届け先
