--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -3,10 +3,10 @@
 <div>
   <%= form_with model: @order, url: public_orders_confirm_path, method: :post, local:true do |f| %>
   <h2>支払い方法</h2>
-      <%= f.radio_button :payment_method, "credit_card" %>
-      <%= f.label :payment_method,"クレジットカード" %>
-      <%= f.radio_button :payment_method, "transfer" %>
-      <%= f.label :payment_method,"銀行振込" %>
+      <%= f.radio_button :payment, "credit_card" %>
+      <%= f.label :payment,"クレジットカード" %>
+      <%= f.radio_button :payment, "transfer" %>
+      <%= f.label :payment,"銀行振込" %>
 </div>
   <div>
     <h2>お届け先</h2>
