--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -3,8 +3,8 @@
    <h3>注文情報</h3>
       <tr><th>注文日</th><td><%= @order.created_at %></td></tr>
       <tr><th>配送先</th><td><%= @order.postcode %><%= @order.address %><%= @order.name %></td></tr>
-      <tr><th>支払方法</th><td><%= @order.payment %></td></tr>
-      <tr><th>ステータス</th><td><%= @order.order_status %></td></tr>
+      <tr><th>支払方法</th><td><%= @order.payment_i18n %></td></tr>
+      <tr><th>ステータス</th><td><%= @order.order_status_i18n %></td></tr>
 </table>
   <h3>注文内容</h3>
   <table class='table'>
@@ -17,7 +17,6 @@
       </tr>
     </thead>
     <tbody>
-
         <% @total = 0 %>
         <% @order_details.each do |order_detail|%>
           <tr>
