--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -2,7 +2,10 @@
 <table>
   <thead>
     <tr>
-      <td>購入者<%= @order.name %></td>
+      <td>購入者<%= link_to admin_homes_top_path do %>
+                <%= @order.name %>
+                <% end %>
+      </td>
     </tr>
     <tr>
       <td>注文日 <%= @order.created_at.strftime('%Y/%m/%d') %></td>
@@ -29,12 +32,12 @@
         <th>単価(税込)</th>
         <th>数量</th>
         <th>小計</th>
-        <td>製作ステータス</td>
+        <td></td>
       </tr>
     </thead>
     <tbody>
       <% @total = 0 %>
-      <% @order_details.each do |order_detail|%>
+      <% @order_details.each do |order_detail| %>
       <tr>
         <td><%= order_detail.item.item_name %></td>
         <td><%= order_detail.tax_price %></td>
@@ -43,14 +46,13 @@
         <%= order_detail.tax_price * order_detail.amount %>
         <% @total += order_detail.tax_price * order_detail.amount %>
         </td>
-      </tr>
+        <td><%= form_with model: order_detail, url: admin_path( @order, order_detail), method: :patch, local:true do |f| %>
+              <%= f.label "製作ステータス" %>
+              <%= f.select :make_status, OrderDetail.make_statuses_i18n.invert, {prompt: false} %>
+              <%= f.submit "更新" , class: "btn btn-outline-success" %>
+        　　　<% end %>
+        </td>
       <% end %>
-      <tr>
-            <td><%= form_with model: @order_detail, url: admin_path(@order_details), method: :patch, local:true do |f| %>
-                <%= f.select :make_status, OrderDetail.make_statuses_i18n.invert, {prompt: false} %>
-                <%= f.submit "更新" , class: "btn btn-outline-success" %>
-          　　  　<% end %>
-          　</td>
       </tr>
     </tbody>
       <tr>
