--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,10 +1,10 @@
 <h2>注文履歴詳細</h2>
  <table class='table'>
    <h3>注文情報</h3>
-      <tr><th>注文日</th><td><%= @order.created_at %></td></tr>
+      <tr><th>注文日</th><td><%= @order.created_at.strftime('%Y/%m/%d') %></td></tr>
       <tr><th>配送先</th><td><%= @order.postcode %><%= @order.address %><%= @order.name %></td></tr>
-      <tr><th>支払方法</th><td><%= @order.payment %></td></tr>
-      <tr><th>ステータス</th><td><%= @order.order_status %></td></tr>
+      <tr><th>支払方法</th><td><%= @order.payment_i18n %></td></tr>
+      <tr><th>ステータス</th><td><%= @order.order_status_i18n %></td></tr>
 </table>
   <h3>注文内容</h3>
   <table class='table'>
