--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,25 +1,29 @@
-<h2>注文履歴一覧</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th>注文日時</th>
-      <th>購入者</th>
-      <th>注文個数</th>
-      <th>注文ステータス</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @total = 0 %>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= link_to admin_order_path(order.id) do %>
-          　<%= order.created_at.strftime('%Y/%m/%d') %>
-          　<% end %>
-        </td>
-        <td><%= order.name %></td>
-        <td><%= order.order_details.sum(:amount) %></td>
-        <td><%= order.order_status_i18n %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <h2>注文履歴一覧</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>注文日時</th>
+          <th>購入者</th>
+          <th>注文個数</th>
+          <th>注文ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @total = 0 %>
+        <% @orders.each do |order| %>
+          <tr>
+            <td><%= link_to admin_order_path(order.id) do %>
+              　<%= order.created_at.strftime('%Y/%m/%d') %>
+              　<% end %>
+            </td>
+            <td><%= order.name %></td>
+            <td><%= order.order_details.sum(:amount) %></td>
+            <td><%= order.order_status_i18n %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
